# infra-bootstrap

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  README.md  tofu-deploy-template.yml
.claude/: settings.local.json
.spacelift/: config.yml
bootstrap/: 00-bootstrap.ps1  01-config.ps1  02-azure-login.ps1  03-app-registration.ps1  04-service-principal.ps1  05-role-assignment.ps1  06-federated-credentials.ps1  06-keyvault.ps1  07-app-permissions.ps1  08-storage-backend.ps1  12-generate-backend.ps1  13-summary.ps1  README.md  local.config.example  migrate-state-to-spacelift.ps1  setup-github-app.ps1  setup-google-cloud.ps1  setup-google-oauth.ps1
claude-container/: Dockerfile  mcp.json
docs/: APP_REPO_SETUP.md  MIGRATION.md
k8s/: root-app.yaml
mcp-servers/github/: Dockerfile  pyproject.toml
mcp-servers/github/src/mcp_github/: __main__.py  auth.py  config.py
scripts/: migrate-cosmos.mjs  package-lock.json  package.json  verify-cosmos.mjs
tofu/: .terraform.lock.hcl  CORS_SETUP.md  CUSTOM_DOMAIN_SETUP.md  DNS_TROUBLESHOOTING.md  README.md  acr.tf  agent-screenshots.tf  aks.tf  ambience-oauth-handoff.tf  ambience-oauth.tf  ambience-standby-dns.tf  auth.tf  backend.tf  budget.tf  claude-container-ci.tf  container-apps.tf.deprecated  container-registry.tf.deprecated  cosmos-serverless.tf  dns-nameservers.txt  dns.tf  fzt-frontend-identity.tf  imports.tf  keyvault.tf  landing-page-cicd.tf  landing.tf  llm-explorer-identity.tf  loki.tf  main.tf  mcp-azure-personal.tf  mcp-github-ci.tf  mcp.tf  network-peering.tf  network.tf  oauth.tf  output.tf  (+5 more)
(+137 files in other folders)
